--- a/README.html
+++ b/README.html
@@ -1,5 +1,9 @@
 <h1>CDSChecker: A Model Checker for C11 and C++11 Atomics</h1>
 
+<p>This is a fork of CDSChecker, a model checker for C11/C++11 which exhaustively explores the behaviors of code under the C/C++ memory model.</p>
+
+<p>See https://plrg.ics.uci.edu/software_page/42-2/</p>
+
 <p>CDSChecker is a model checker for C11/C++11 which exhaustively explores the
 behaviors of code under the C/C++ memory model. It uses partial order reduction
 as well as a few other novel techniques to eliminate time spent on redundant
@@ -408,7 +412,7 @@ Bug report: 4 bugs detected
 and we are happy to hear from our users. We are also very interested to know if
 CDSChecker catches bugs in your programs.</p>
 
-<p>Contact Brian Norris at <a href="&#109;&#97;&#105;&#x6C;&#x74;&#x6F;:&#x62;&#x61;&#110;o&#114;&#x72;&#105;&#115;&#64;&#x75;&#x63;&#105;&#x2E;&#101;&#100;&#117;">&#x62;&#x61;&#110;o&#114;&#x72;&#105;&#115;&#64;&#x75;&#x63;&#105;&#x2E;&#101;&#100;&#117;</a> or Brian Demsky at <a href="&#109;&#97;&#x69;l&#116;&#x6F;:b&#x64;&#101;m&#115;&#107;&#x79;&#64;&#117;&#x63;&#x69;&#46;&#x65;&#100;&#x75;">b&#x64;&#101;m&#115;&#107;&#x79;&#64;&#117;&#x63;&#x69;&#46;&#x65;&#100;&#x75;</a>.</p>
+<p>Contact Brian Norris at <a href="&#109;&#97;&#x69;&#108;t&#111;:&#98;&#97;&#110;&#111;&#114;&#114;&#105;&#115;&#64;&#117;&#99;&#x69;&#x2E;&#101;&#100;&#117;">&#98;&#97;&#110;&#111;&#114;&#114;&#105;&#115;&#64;&#117;&#99;&#x69;&#x2E;&#101;&#100;&#117;</a> or Brian Demsky at <a href="&#x6D;&#97;&#105;l&#116;&#x6F;:b&#100;&#x65;&#x6D;&#x73;&#107;&#121;&#64;&#117;&#99;&#x69;&#46;&#x65;&#100;&#117;">b&#100;&#x65;&#x6D;&#x73;&#107;&#121;&#64;&#117;&#99;&#x69;&#46;&#x65;&#100;&#117;</a>.</p>
 
 <h2>Copyright</h2>
 
