--- a/README.html
+++ b/README.html
@@ -14,7 +14,7 @@
 - fetch <a href="https://github.com/ianlancetaylor/libbacktrace">libbacktrace</a> &amp;&amp; <code>./configure ...</code> and <code>make</code>
 - point <code>common.mk</code> to libbacktrace
 - <code>make</code>
-- <code>./run.sh tests/deadlock.o</code></p>
+- <code>./run.sh test/deadlock.o</code></p>
 
 <p>```
 $ ./run.sh test/deadlock.o
@@ -490,7 +490,7 @@ Bug report: 4 bugs detected
 and we are happy to hear from our users. We are also very interested to know if
 CDSChecker catches bugs in your programs.</p>
 
-<p>Contact Brian Norris at <a href="&#109;&#x61;&#x69;&#x6C;&#116;&#x6F;:&#x62;&#x61;&#x6E;&#x6F;&#x72;&#x72;&#105;&#115;&#64;&#117;&#x63;i&#46;&#101;&#100;&#x75;">&#x62;&#x61;&#x6E;&#x6F;&#x72;&#x72;&#105;&#115;&#64;&#117;&#x63;i&#46;&#101;&#100;&#x75;</a> or Brian Demsky at <a href="&#109;&#x61;&#105;&#x6C;&#x74;&#111;:&#98;&#100;&#101;&#x6D;&#x73;&#x6B;&#x79;&#64;&#117;&#x63;&#x69;.&#x65;&#x64;&#117;">&#98;&#100;&#101;&#x6D;&#x73;&#x6B;&#x79;&#64;&#117;&#x63;&#x69;.&#x65;&#x64;&#117;</a>.</p>
+<p>Contact Brian Norris at <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6F;:&#98;&#97;&#x6E;o&#x72;&#x72;&#x69;&#115;&#64;&#x75;&#99;&#x69;&#46;&#x65;d&#117;">&#98;&#97;&#x6E;o&#x72;&#x72;&#x69;&#115;&#64;&#x75;&#99;&#x69;&#46;&#x65;d&#117;</a> or Brian Demsky at <a href="m&#97;&#105;&#x6C;&#x74;&#111;:&#98;&#x64;&#101;&#x6D;&#115;&#x6B;&#x79;&#64;u&#x63;&#105;&#46;e&#100;&#x75;">&#98;&#x64;&#101;&#x6D;&#115;&#x6B;&#x79;&#64;u&#x63;&#105;&#46;e&#100;&#x75;</a>.</p>
 
 <h2>Copyright</h2>
 
