--- a/README.html
+++ b/README.html
@@ -8,7 +8,7 @@
 
 <p>The code is forked from <a href="http://plrg.eecs.uci.edu/git/?p=model-checker.git;a=tree">http://plrg.eecs.uci.edu</a> and not from <a href="https://github.com/bdemsky/cdschecker">github</a> as it sems more recent. I do not know the differences yet.</p>
 
-<p>Another similar tool is relacy: <a href="https://github.com/dvyukov/relacy">fork1</a> or <a href="https://github.com/ccotter/relacy">fork2</a>.</p>
+<p>Both of these versions fail to detect memory fences bugs that relacy (<a href="https://github.com/dvyukov/relacy">fork1</a> or <a href="https://github.com/ccotter/relacy">fork2</a>) does. For these <a href="https://github.com/bdemsky/c11tester">c11tester</a> might be a better tool. </p>
 
 <p>Recipe:
 - <code>cd libbacktrace</code>
@@ -491,7 +491,7 @@ Bug report: 4 bugs detected
 and we are happy to hear from our users. We are also very interested to know if
 CDSChecker catches bugs in your programs.</p>
 
-<p>Contact Brian Norris at <a href="&#x6D;a&#x69;&#x6C;&#116;&#111;:&#98;&#x61;&#x6E;&#x6F;&#x72;r&#105;&#x73;&#64;&#117;&#99;&#105;&#46;&#x65;&#100;u">&#98;&#x61;&#x6E;&#x6F;&#x72;r&#105;&#x73;&#64;&#117;&#99;&#105;&#46;&#x65;&#100;u</a> or Brian Demsky at <a href="&#x6D;a&#x69;&#108;&#116;&#111;:&#98;&#100;&#x65;m&#115;&#107;&#x79;&#64;&#117;&#99;&#105;&#46;&#101;&#100;&#x75;">&#98;&#100;&#x65;m&#115;&#107;&#x79;&#64;&#117;&#99;&#105;&#46;&#101;&#100;&#x75;</a>.</p>
+<p>Contact Brian Norris at <a href="m&#x61;&#x69;&#x6C;&#x74;o:&#x62;&#x61;&#x6E;&#x6F;&#x72;&#114;&#x69;&#x73;&#64;&#x75;&#99;&#x69;&#46;&#101;du">&#x62;&#x61;&#x6E;&#x6F;&#x72;&#114;&#x69;&#x73;&#64;&#x75;&#99;&#x69;&#46;&#101;du</a> or Brian Demsky at <a href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#111;:&#98;&#x64;&#101;&#x6D;&#115;&#x6B;&#121;&#64;&#x75;&#x63;&#x69;&#x2E;&#101;&#100;&#117;">&#98;&#x64;&#101;&#x6D;&#115;&#x6B;&#121;&#64;&#x75;&#x63;&#x69;&#x2E;&#101;&#100;&#117;</a>.</p>
 
 <h2>Copyright</h2>
 
