obsoleted repo note

--- a/README.html
+++ b/README.html
@@ -6,7 +6,9 @@
 
 <p>This fork sports a bug report with callstack traces as I find the plain bug report hard to make sense of.</p>
 
-<p>The code is forked from <a href="http://plrg.eecs.uci.edu/git/?p=model-checker.git;a=tree">http://plrg.eecs.uci.edu</a> and not from <a href="https://github.com/bdemsky/cdschecker">github</a> as it sems more recent. I do not know the differences yet butthe github version has buggy makefiles.</p>
+<p>~~The code is forked from <a href="http://plrg.eecs.uci.edu/git/?p=model-checker.git;a=tree">http://plrg.eecs.uci.edu</a> and not from <a href="https://github.com/bdemsky/cdschecker">github</a> as it sems more recent. I do not know the differences yet butthe github version has buggy makefiles.~~</p>
+
+<p>Use the <a href="https://github.com/melintea/cdschecker2">cdschecker</a> fork and ignore this repo.</p>
 
 <p>Both of these versions fail to detect memory fences bugs that relacy (<a href="https://github.com/dvyukov/relacy">fork1</a> or <a href="https://github.com/ccotter/relacy">fork2</a>) does. For these <a href="https://github.com/bdemsky/c11tester">c11tester</a> might be a better tool. </p>
 
@@ -491,7 +493,7 @@ Bug report: 4 bugs detected
 and we are happy to hear from our users. We are also very interested to know if
 CDSChecker catches bugs in your programs.</p>
 
-<p>Contact Brian Norris at <a href="&#109;a&#105;&#x6C;&#116;&#x6F;:&#x62;&#97;&#x6E;o&#x72;&#x72;&#x69;s&#64;&#x75;&#99;&#x69;&#x2E;&#101;d&#x75;">&#x62;&#97;&#x6E;o&#x72;&#x72;&#x69;s&#64;&#x75;&#99;&#x69;&#x2E;&#101;d&#x75;</a> or Brian Demsky at <a href="m&#x61;&#105;&#x6C;&#x74;&#111;:&#98;&#100;&#x65;&#x6D;&#x73;&#x6B;&#x79;&#64;&#117;c&#x69;&#x2E;&#101;&#x64;&#x75;">&#98;&#100;&#x65;&#x6D;&#x73;&#x6B;&#x79;&#64;&#117;c&#x69;&#x2E;&#101;&#x64;&#x75;</a>.</p>
+<p>Contact Brian Norris at <a href="&#x6D;&#97;&#105;&#x6C;t&#111;:&#98;&#x61;&#x6E;&#111;&#x72;&#114;&#105;&#x73;&#64;&#x75;&#99;i&#x2E;e&#x64;&#x75;">&#98;&#x61;&#x6E;&#111;&#x72;&#114;&#105;&#x73;&#64;&#x75;&#99;i&#x2E;e&#x64;&#x75;</a> or Brian Demsky at <a href="&#109;&#97;&#105;l&#x74;&#x6F;:&#98;&#x64;&#x65;&#x6D;&#x73;k&#x79;&#64;&#117;&#x63;&#x69;&#x2E;&#x65;&#x64;&#x75;">&#98;&#x64;&#x65;&#x6D;&#x73;k&#x79;&#64;&#117;&#x63;&#x69;&#x2E;&#x65;&#x64;&#x75;</a>.</p>
 
 <h2>Copyright</h2>
 
